# P2P-Chat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Client.cpp  Client.h  CryptoManager.cpp  CryptoManager.h  Enums.h  Group.cpp  Group.h  GroupManager.cpp  GroupManager.h  Helper.h  IpManager.cpp  IpManager.h  Logger.cpp  Logger.h  MessageManager.cpp  MessageManager.h  NetworkManager.cpp  NetworkManager.h  NicknameManager.cpp  NicknameManager.h  Topology.cpp  Topology.h
